implement welcome page layout and routing

--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -1,1 +1,22 @@
-<p>welcome-page works!</p>
+<div class="container">
+  <div class="header">
+    <h5>Online Exam Portal</h5>
+    <button class="register-btn">Đăng ký</button>
+  </div>
+
+  <div class="content">
+    <div class="left-panel">
+      <h2 style="font-size: 36px">Chào mừng bạn đến với<br>Online Exam Portal</h2>
+      <label style="font-size: 16px" for="role">Chọn vai trò của bạn</label>
+      <select id="role">
+        <option>Tôi là học sinh</option>
+        <option>Tôi là giáo viên</option>
+      </select>
+      <button class="continue-btn">Tiếp tục</button>
+    </div>
+
+    <div class="right-panel">
+      <img src="/Welcome.png" alt="Exam Portal Image" />
+    </div>
+  </div>
+</div>
