refactor routing and update student and teacher login components with new layout and styles

--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="header">
-    <h5>Online Exam Portal</h5>
+    <h5 style="font-size: 20px">Online Exam Portal</h5>
     <button class="register-btn" (click)="onRegister()">Đăng ký</button>
   </div>
 
