--- a/src/app/login/teacher/teacher.component.html
+++ b/src/app/login/teacher/teacher.component.html
@@ -1,1 +1,29 @@
-<p>teacher works!</p>
+<div class="container">
+  <div class="login-header">
+    <a routerLink="">Online Exam Portal</a>
+    <div class="user-type">
+      <select>
+        <option>Tôi là giáo viên</option>
+        <option>Tôi là học sinh</option>
+      </select>
+    </div>
+  </div>
+
+  <div class="login-container">
+    <div class="login-form">
+      <h3 style="font-size: 36px">Học sinh đăng nhập</h3>
+      <form>
+        <input type="text" placeholder="Email/ Số điện thoại" required />
+        <input type="password" placeholder="Mật khẩu" required />
+        <a routerLink="/forgot-password" class="forgot-password">Quên mật khẩu?</a>
+        <button type="submit">Đăng nhập</button>
+
+        <p class="register">Bạn chưa có tài khoản? <a routerLink="/sign_up/student">Đăng ký ngay</a></p>
+      </form>
+    </div>
+
+    <div class="login-image">
+      <img src="/Welcome.png" alt="Login Illustration" />
+    </div>
+  </div>
+</div>
