update student component for teacher signup with form validation and new layout

--- a/src/app/login/teacher/teacher.component.html
+++ b/src/app/login/teacher/teacher.component.html
@@ -11,7 +11,7 @@
 
   <div class="login-container">
     <div class="login-form">
-      <h3 style="font-size: 36px">Học sinh đăng nhập</h3>
+      <h3 style="font-size: 36px">Giáo viên đăng nhập</h3>
       <form>
         <input type="text" placeholder="Email/ Số điện thoại" required />
         <input type="password" placeholder="Mật khẩu" required />
