--- a/src/app/login/teacher/teacher.component.html
+++ b/src/app/login/teacher/teacher.component.html
@@ -18,7 +18,7 @@
         <a routerLink="/forgot-password" class="forgot-password">Quên mật khẩu?</a>
         <button type="submit">Đăng nhập</button>
 
-        <p class="register">Bạn chưa có tài khoản? <a routerLink="/sign_up/student">Đăng ký ngay</a></p>
+        <p class="register">Bạn chưa có tài khoản? <a routerLink="/sign_up/teacher">Đăng ký ngay</a></p>
       </form>
     </div>
 
