update image sources in student, teacher, and welcome page components

--- a/src/app/login/student/student.component.html
+++ b/src/app/login/student/student.component.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="login-image">
-      <img src="/Welcome.png" alt="Login Illustration" />
+      <img src="/Login.png" alt="Login Illustration" />
     </div>
   </div>
 </div>
