--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="right-panel">
-      <img src="/Welcome.png" alt="Exam Portal Image" />
+      <img src="/Login.png" alt="Exam Portal Image" />
     </div>
   </div>
 </div>
