--- a/src/app/login/student/student.component.html
+++ b/src/app/login/student/student.component.html
@@ -2,12 +2,13 @@
   <div class="login-header">
     <a routerLink="">Online Exam Portal</a>
     <div class="user-type">
-      <select>
-        <option>Tôi là học sinh</option>
-        <option>Tôi là giáo viên</option>
+      <select (change)="onUserTypeChange($event)">
+        <option value="student">Tôi là học sinh</option>
+        <option value="teacher">Tôi là giáo viên</option>
       </select>
     </div>
   </div>
+
 
   <div class="login-container">
     <div class="login-form">
