--- a/src/app/login/student/student.component.scss
+++ b/src/app/login/student/student.component.scss
@@ -1,5 +1,4 @@
 * {
-  margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
@@ -29,12 +28,38 @@
   font-weight: bold;
 }
 
-.user-type select {
-  padding: 8px 12px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  font-size: 14px;
+.user-type-button {
+  background: #ffffff;
+  color: #000000;
+  border: 1px solid #333333;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 10px 20px;
+  position: relative;
+  overflow: hidden;
 }
+
+.user-type-button::after {
+  content: attr(data-hover);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #ffffff;
+  opacity: 0;
+  white-space: nowrap;
+}
+
+.user-type-button:hover::after {
+  opacity: 1;
+}
+
+.user-type-button:hover {
+  background: #00A859;
+  border: 1px solid #00a758;
+  color: transparent; /* Ẩn nội dung gốc khi hover */
+}
+
 
 .login-container {
   display: flex;
