--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,4 +1,20 @@
 <header class="header">
-  <a routerLink="/">Online Exam Portal</a>
-  <button (click)="onRegister()" class="register-btn">Đăng ký</button>
+  <!-- Logo -->
+  <div class="logo">Online Exam Portal</div>
+
+  <!-- Navigation -->
+  <nav class="nav">
+    <a href="#" class="nav-item active">Tổng quan</a>
+    <a href="#" class="nav-item">Kỳ thi</a>
+  </nav>
+
+  <!-- User Dropdown -->
+  <div class="user-info">
+    <div class="user-info__wrap">
+      <figure class="avatar"><img src="" alt=""></figure>
+      <p class="user-name">Name</p>
+      <img class="drop-down-arrow" src="/icon/drop-down-arrow.svg" alt="">
+    </div>
+  </div>
 </header>
+
