--- a/src/app/shared/components/login-form/login-form.component.html
+++ b/src/app/shared/components/login-form/login-form.component.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="login-image">
-      <img alt="Login Illustration" height="584" ngSrc="/Login.png" width="584"/>
+      <img alt="Login Illustration" height="584" ngSrc="/images/Login.png" width="584"/>
     </div>
   </div>
 
