--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,43 +1,69 @@
-/* Reset */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+// Màu sắc
+$primary-color: #16a34a; // Màu xanh lá
+$text-color: #333;
+$background-color: #fff;
+$toggle-bg: #ccc;
+$toggle-checked-bg: #555;
 
-/* Header */
 .header {
-  width: 100%;
-  background-color: #ffffff;
-  padding: 20px 40px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: "Arial", sans-serif;
-}
+  height: 80px;
+  padding: 0 30px;
+  border-bottom: solid 1px #ededed;
+  background: $background-color;
 
-/* Logo */
-.header__logo {
-  font-size: 22px;
-  font-weight: bold;
-  color: #000000;
-  text-decoration: none;
-}
+  .logo {
+    font-size: 20px;
+    font-weight: bold;
+  }
 
-/* Nút đăng ký */
-.register-btn {
-  background-color: transparent;
-  border: 1px solid #28a745;
-  color: #28a745;
-  padding: 8px 16px;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: 500;
-  transition: all 0.3s ease-in-out;
-}
+  .nav {
+    display: flex;
+    gap: 40px;
+    align-items: center;
 
-.register-btn:hover {
-  background-color: #28a745;
-  color: white;
+    .nav-item {
+      text-decoration: none;
+      color: $text-color;
+      font-size: 20px;
+      font-weight: 500;
+      transition: color 0.3s;
+
+      &:hover {
+        color: $primary-color;
+      }
+
+      &.active {
+        color: $primary-color;
+        font-weight: bold;
+        font-size: 20px;
+      }
+    }
+  }
+
+  .user-info {
+    .user-info__wrap {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      width: 150px;
+      height: 50px;
+      background: #ededed;
+      border-radius: 25px;
+    }
+
+    .avatar {
+      width: 50px;
+      height: 50px;
+      background: #b3b3b3;
+      border-radius: 50%;
+    }
+
+    .drop-down-arrow {
+      width: 15px;
+      height: 15px;
+    }
+  }
 }
