--- a/src/app/pages/welcome-page/welcome-page.component.html
+++ b/src/app/pages/welcome-page/welcome-page.component.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="right-panel">
-      <img alt="Exam Portal Image" height="584" ngSrc="/Login.png" width="584"/>
+      <img alt="Exam Portal Image" height="584" ngSrc="/images/Login.png" width="584"/>
     </div>
   </div>
 </div>
