--- a/src/app/shared/components/login-form/login-form.component.scss
+++ b/src/app/shared/components/login-form/login-form.component.scss
@@ -141,7 +141,8 @@ button:hover {
 
 .error {
   position: absolute;
-  bottom: -16px;
+  bottom: -4px;
+  background: #ffffff;
   left: 0;
   color: red;
   font-size: 10px;
