--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,21 +1,25 @@
 // Màu sắc
-$primary-color: #16a34a; // Màu xanh lá
+$primary-color: #04AA6D; // Màu xanh lá
 $text-color: #333;
 $background-color: #fff;
 $toggle-bg: #ccc;
 $toggle-checked-bg: #555;
 
 .header {
+  position: fixed;
+  top: 0;
+  z-index: 99;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
   height: 80px;
   padding: 0 30px;
   border-bottom: solid 1px #ededed;
   background: $background-color;
 
   .logo {
-    font-size: 20px;
+    font-size: 1.4rem;
     font-weight: bold;
   }
 
@@ -27,7 +31,7 @@ $toggle-checked-bg: #555;
     .nav-item {
       text-decoration: none;
       color: $text-color;
-      font-size: 20px;
+      font-size: 1.4rem;
       font-weight: 500;
       transition: color 0.3s;
 
@@ -38,7 +42,7 @@ $toggle-checked-bg: #555;
       &.active {
         color: $primary-color;
         font-weight: bold;
-        font-size: 20px;
+        font-size: 1.6rem;
       }
     }
   }
@@ -47,23 +51,26 @@ $toggle-checked-bg: #555;
     .user-info__wrap {
       display: flex;
       align-items: center;
-      gap: 12px;
-      width: 150px;
+      justify-content: space-between;
+      width: 180px;
       height: 50px;
       background: #ededed;
       border-radius: 25px;
+
+      .avatar {
+        width: 50px;
+        height: 50px;
+        background: #b3b3b3;
+        border-radius: 50%;
+      }
+
+      .drop-down-arrow {
+        margin-right: 10px;
+        width: 15px;
+        height: 15px;
+      }
     }
 
-    .avatar {
-      width: 50px;
-      height: 50px;
-      background: #b3b3b3;
-      border-radius: 50%;
-    }
 
-    .drop-down-arrow {
-      width: 15px;
-      height: 15px;
-    }
   }
 }
