--- a/src/app/pages/welcome-page/welcome-page.component.scss
+++ b/src/app/pages/welcome-page/welcome-page.component.scss
@@ -53,7 +53,7 @@
 
 /* Phần bên trái */
 .left-panel {
-  max-width: 40%;
+  width: 500px;
 }
 
 .left-panel h2 {
@@ -83,8 +83,8 @@
   background-color: #28a745;
   border: none;
   color: white;
-  font-weight: bold;
-  padding: 10px; /* Giảm kích thước nút Tiếp tục */
+  font-size: 16px;
+  height: 40px;
   border-radius: 5px;
   width: 100%;
   cursor: pointer;
