feat: add student exam component and update student home layout with smooth scrolling

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -3,10 +3,7 @@
   <div class="logo">Online Exam Portal</div>
 
   <!-- Navigation -->
-  <nav class="nav">
-    <a href="#" class="nav-item active">Tổng quan</a>
-    <a href="#" class="nav-item">Kỳ thi</a>
-  </nav>
+  <ng-content></ng-content>
 
   <!-- User Dropdown -->
   <div class="user-info">
