--- a/src/app/pages/home/student-home/student-home.component.html
+++ b/src/app/pages/home/student-home/student-home.component.html
@@ -12,35 +12,35 @@
   <main class="main">
     <div id="schedule" class="wrap schedule-wrap">
       <h3 class="heading schedule__heading">Lịch thi hôm nay</h3>
-      <div class="list schedule__list">
-        <div class="list-heading">
-          <p class="list-heading-item">Tên bài thi</p>
-          <p class="list-heading-item">Lớp</p>
-          <p class="list-heading-item">Giờ bắt đầu</p>
-        </div>
-      </div>
+      <table class="list schedule__list">
+        <tr class="list-heading">
+          <th class="list-heading-item">Tên bài thi</th>
+          <th class="list-heading-item">Lớp</th>
+          <th class="list-heading-item">Giờ bắt đầu</th>
+        </tr>
+      </table>
     </div>
 
     <div id="unfished-exam" class="wrap unfished-exam__wrap">
       <h3 class="heading unfished-exam__heading">Bài thi chưa làm</h3>
-      <div class="list unfished-exam_list">
-        <div class="list-heading">
-          <p class="list-heading-item">Tên bài thi</p>
-          <p class="list-heading-item">Lớp</p>
-          <p class="list-heading-item">Giờ kết thúc</p>
-        </div>
-      </div>
+      <table class="list unfished-exam_list">
+        <tr class="list-heading">
+          <th class="list-heading-item">Tên bài thi</th>
+          <th class="list-heading-item">Lớp</th>
+          <th class="list-heading-item">Giờ kết thúc</th>
+        </tr>
+      </table>
     </div>
 
     <div id="achievement" class="wrap achievement__wrap">
       <h3 class="heading achievement__heading">Thành tích</h3>
-      <div class="list achievement__list">
-        <div class="list-heading">
-          <p class="list-heading-item">Tên lớp thi</p>
-          <p class="list-heading-item">Giáo viên</p>
-          <p class="list-heading-item">ĐTB</p>
-        </div>
-      </div>
+      <table class="list achievement__list">
+        <tr class="list-heading">
+          <th class="list-heading-item">Tên lớp thi</th>
+          <th class="list-heading-item">Giáo viên</th>
+          <th class="list-heading-item">ĐTB</th>
+        </tr>
+      </table>
     </div>
   </main>
 </body>
