--- a/src/app/layout/search-bar/search-bar.component.html
+++ b/src/app/layout/search-bar/search-bar.component.html
@@ -3,4 +3,6 @@
     <input id="search-input" class="search-input" placeholder="Tìm kiếm..." type="text"
     [style.color]="textColor" (input)="changeColor()"/>
   </form>
+
+  <button class="create-button"><ng-content>+ Tạo kỳ thi</ng-content></button>
 </div>
