--- a/src/app/layout/search-bar/search-bar.component.scss
+++ b/src/app/layout/search-bar/search-bar.component.scss
@@ -30,4 +30,15 @@
       font-size: 1.6rem;
     }
   }
+
+  .create-button {
+    margin-right: 40px;
+    width: 230px;
+    height: 50px;
+    border: none;
+    border-radius: 5px;
+    background: var(--primary-color);
+    outline: none;
+    color: #fff;
+  }
 }
