--- a/src/app/pages/student/do-test/do-test.component.scss
+++ b/src/app/pages/student/do-test/do-test.component.scss
@@ -1,44 +1,109 @@
-.answer-sheet {
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
+  height: 100vh;
+  font-family: Arial, sans-serif;
+
+  .exam-file {
+    flex: 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #e5e5e5;
+    font-size: 18px;
+    color: #333;
+  }
+
+  .do-test {
+    flex: 1;
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 10px;
+    border-left: 1px solid #ccc;
+
+    .counter-wrap {
+      width: 100%;
+      background: #04AA6D;
+      color: white;
+      text-align: left;
+      padding: 10px;
+      font-size: 1.6rem;
+
+      .counter {
+        font-size: 24px;
+      }
+    }
+    .answer-sheet {
+      width: 100%;
+      text-align: center;
+      margin-top: 15px;
+
+      .subject {
+        width: 90%;
+        padding: 8px;
+        text-align: center;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+      }
+
+      h3 {
+        margin-top: 15px;
+        font-size: 1.6rem;
+      }
+
+      .grid {
+        display: grid;
+        grid-template-columns: repeat(5, 40px);
+        gap: 10px;
+        justify-content: center;
+        margin-top: 15px;
+
+        button {
+          width: 40px;
+          height: 40px;
+          border: 1px solid #9d9d9e;
+          background: white;
+          cursor: pointer;
+          font-weight: bold;
+          transition: 0.2s;
+
+          &.selected {
+            background-color: lightblue;
+          }
+
+          &.answered {
+            font-weight: bold;
+            background-color: #9d9d9e; // Màu vàng nhẹ để đánh dấu đã trả lời
+          }
+        }
+      }
+      .answer-input {
+        width: 90%;
+        padding: 10px;
+        text-align: center;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        margin-top: 15px;
+        font-size: 16px;
+      }
+
+      .submit-btn {
+        background-color: #04aa6d;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        cursor: pointer;
+        border-radius: 5px;
+        margin-top: 15px;
+        font-size: 16px;
+        width: 90%;
+
+        &:hover {
+          background-color: #008646;
+        }
+      }
+    }
+  }
 }
 
-.subject {
-  width: 80%;
-  padding: 5px;
-  text-align: center;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.grid {
-  display: grid;
-  grid-template-rows: repeat(5, auto);
-  gap: 10px;
-}
-
-.row {
-  display: flex;
-  gap: 10px;
-}
-
-.cell {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 1px solid black;
-  padding: 10px;
-  min-width: 80px;
-  text-align: center;
-}
-
-.submit-btn {
-  background-color: #00a86b;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-}
