feat: enhance exam component with header, search bar, and exam table

--- a/src/app/layout/header/header-student/header-student.component.html
+++ b/src/app/layout/header/header-student/header-student.component.html
@@ -1,6 +1,7 @@
 <app-header>
   <nav class="nav">
-    <a [routerLink]="['/home/student']" class="nav-item active">Tổng quan</a>
-    <a [routerLink]="['/exam/student']" class="nav-item">Kỳ thi</a>
+    <a [routerLink]="['/home/student']" routerLinkActive="active" class="nav-item">Tổng quan</a>
+    <a [routerLink]="['/student/exam']" routerLinkActive="active" class="nav-item">Kỳ thi</a>
   </nav>
 </app-header>
+
