--- a/src/app/layout/search-bar/search-bar.component.html
+++ b/src/app/layout/search-bar/search-bar.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+ <div class="container">
   <form class="search-form" action="">
     <input id="search-input" class="search-input" placeholder="Tìm kiếm..." type="text"
     [style.color]="textColor" (input)="changeColor()"/>
   </form>
 
-  <button class="create-button"><ng-content>+ Tạo kỳ thi</ng-content></button>
+  <button class="create-button"><ng-content></ng-content></button>
 </div>
