--- a/src/app/pages/student/exam/exam.component.html
+++ b/src/app/pages/student/exam/exam.component.html
@@ -1,1 +1,25 @@
-<p>exam works!</p>
+<app-header-student></app-header-student>
+<app-search-bar>
+  Tìm kỳ thi
+</app-search-bar>
+<div class="exam-table">
+  <table>
+    <thead>
+    <tr>
+      <th>Tên kỳ thi</th>
+      <th>Học sinh</th>
+      <th>Bài thi</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let exam of exams">
+      <td>
+        <p class="exam-name">{{ exam.name }}</p>
+        <p class="class-code">Mã lớp: {{ exam.classCode }}</p>
+      </td>
+      <td>{{ exam.students }}</td>
+      <td>{{ exam.tests }}</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
