feat: add user form and exam detail routes, and fix exam name display

--- a/src/app/pages/student/exam-detail/exam-detail.component.html
+++ b/src/app/pages/student/exam-detail/exam-detail.component.html
@@ -13,7 +13,7 @@
   </thead>
   <tbody>
   <tr *ngFor="let exam of exams">
-    <td>{{ exam.name }} {{}}</td>
+    <td>{{ exam.name }}</td>
     <td>{{ exam.duration }}</td>
     <td>{{ exam.dateCreated }}</td>
     <td>{{ exam.status }}</td>
