feat: add exam detail component and update routing for exam details

--- a/src/app/pages/student/exam-detail/exam-detail.component.html
+++ b/src/app/pages/student/exam-detail/exam-detail.component.html
@@ -5,7 +5,7 @@
     <table>
       <thead>
       <tr>
-        <th>Giải Tích 1 / {{examCode}}</th>
+        <th>{{examName}} / {{examCode}}</th>
         <th>Thời gian</th>
         <th>Ngày bắt đầu</th>
         <th>Trạng thái</th>
