feat: enhance authentication flow and update exam details display

--- a/src/app/pages/student/exam/exam.component.html
+++ b/src/app/pages/student/exam/exam.component.html
@@ -1,6 +1,6 @@
 <app-header-student></app-header-student>
 <app-search-bar>
-  Tìm kỳ thi
+  Tìm kỳ thi với mã
 </app-search-bar>
 <div class="exam-table">
   <table>
@@ -8,7 +8,7 @@
     <tr>
       <th>Tên kỳ thi</th>
       <th>Học sinh</th>
-      <th>Bài thi</th>
+      <th>Số lượng đề</th>
     </tr>
     </thead>
     <tbody>
