feat: update button background color for improved visibility

--- a/src/app/shared/components/user-form/user-form.component.scss
+++ b/src/app/shared/components/user-form/user-form.component.scss
@@ -105,7 +105,7 @@ header {
   .btn {
     width: 100%; /* Nút dài bằng input */
     padding: 10px;
-    background-color: #28a745;
+    background-color: #60b672;
     color: #fff;
     border: none;
     border-radius: 5px;
