--- a/src/app/pages/login/student-login/student-login.component.html
+++ b/src/app/pages/login/student-login/student-login.component.html
@@ -1,4 +1,4 @@
-<app-login-form (userTypeChange)="onUserTypeChange()" [link]="'/sign-up/student'">
+<app-login-form (userTypeChange)="onUserTypeChange()" [link]="'/sign-up/student'" [onLogin]="onLoginStudent">
   <div present_role>Tôi là học sinh</div>
   <div login_heading>Học sinh đăng nhập</div>
 </app-login-form>
