--- a/src/app/pages/login/teacher-login/teacher-login.component.html
+++ b/src/app/pages/login/teacher-login/teacher-login.component.html
@@ -1,4 +1,4 @@
-<app-login-form (userTypeChange)="onUserTypeChange()" [link]="'/sign-up/teacher'">
+<app-login-form (userTypeChange)="onUserTypeChange()" [link]="'/sign-up/teacher'" [onLogin]="onLoginTeacher">
   <div present_role>Tôi là giáo viên</div>
   <div login_heading>Giáo viên đăng nhập</div>
 </app-login-form>
